--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+}
+
 @font-face {
     font-family: 'DRSEUSS';
     src: url('DRSEUSS.TTF') format('truetype');
 }
 
 :root {
-    --primary-color: #f00;
-    --secondary-color: rgb(78, 255, 47);
+    --primary-color: rgb(233, 19, 19);
+    --secondary-color: rgb(176, 255, 17);
     --tertiary-color: rgb(255, 255, 255);
     --quaternary-color: rgb(255, 255, 255);
     font-family: 'DRSEUSS';
@@ -15,13 +20,14 @@
   }
 
 body { 
-    margin-top: 20vh;
+    margin-top: 10vh;
     margin-left: 20vw;
     margin-right: 20vw;
     margin-bottom: 20vh;
     background-color: var(--primary-color);
     color: var(--secondary-color);
     text-align: left;
+    overflow-y: hidden;
 }
 
 button,select{
@@ -37,7 +43,8 @@ button,select{
 #file-input-container{
     color: var(--primary-color);
     text-shadow: 0.2vh 0.2vh 0 white;
-    width: 600px;
+    width: 450px;
+    height: 64px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -51,4 +58,3 @@ button,select{
 #result{
     color: var(--tertiary-color);
 }
-
